# siren

./: .gitignore  .pylintrc  README.md  bootstrap.bash  check_error_images.py  conda-lock.yml  environment.yml  infer.py  infer_interp_coord.py  pyproject.toml  virtual_packages.yml  visualize_activations.py
datasets/: DELETE_EMD.py  crop_image.py  filter.py  manufactured.py  mask.py  metrics.py  plot_manufactured.py  potential_flow_cylinder.py  potential_flow_cylinder_2.py  preproc_emd.py  vector_ops.py
datasets/emd/: REMOVE_preproc_emd.py  cc.py  emd.py  plot_results_mat.py
src/: checkpoint.py  datasets.py  dtos.py  early_stopping.py  hyperparameters.py  initialization.py  loaders.py  losses.py  main.py  metrics.py  my_types.py  read_images.py  running.py  save_image.py  siren.py  tensorboard_tracker.py  time_it.py  timeit.py  tracking.py  train.py  transformations.py  validate_dir.py  vector_ops.py
