[tool.poetry]
name = "siren"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
conda-lock = "^2.5.5"
torch = {version = "2.2.0+cu118", source = "torch"}
torchvision = {version = "0.17.0+cu118", source = "torch"}
pillow = "^10.2.0"
tqdm = "^4.66.2"
tensorboard = "^2.16.2"
configargparse = "^1.7"
scikit-image = "^0.22.0"
torchmetrics = "^1.3.1"

[tool.poetry.group.dev.dependencies]
nptyping = "^2.5.0"
torchtyping = "^0.1.4"
black = "^24.2.0"
pylint = "^3.1.0"
isort = "^5.13.2"


[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "datasets"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
